--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,5 +10,6 @@
 // Feel free to remove this file if you're using Less
 
 // bower:scss
-@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+
+@import "layouts/_home";
