--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -1,5 +1,203 @@
+$heroFontColor: #fcfbf3; // hero text
+
+
+
 .js-owl-full-width img{
     display: block;
     width: 100%;
     height: auto;
+}
+
+
+/* Shared
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.button {
+    border-radius: 100px;
+}
+
+/* Sections
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.section {
+    padding: 8rem 0 7rem;
+    text-align: center;
+
+    /* Bigger than 550 */
+    @media (#{$bp-larger-than-phablet}) {
+        padding: 12rem 0 11rem;
+    }
+
+    /* Bigger than 750 */
+    @media (#{$bp-larger-than-tablet}) {
+        padding: 14rem 0 15rem;
+    }
+
+    /* Bigger than 1000 */
+    @media (#{$bp-larger-than-desktop}) {
+        padding: 20rem 0 19rem;
+//        padding: 28rem;
+    }
+}
+
+.section-heading,
+.section-description {
+    margin-bottom: 1.2rem;
+}
+
+/* Bigger than 750 */
+@media (#{$bp-larger-than-tablet}) {
+    .section-description {
+        max-width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+/* Hero
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.hero {
+//    background-color: #F7F1EC;
+//    background-image: url('../images/values-bg.jpg');
+    background: url("../images/splash.jpg") no-repeat fixed left center/cover #424141;
+//    background-size: cover;
+
+    color: $heroFontColor;
+
+    /* Bigger than 550 */
+    @media (#{$bp-larger-than-phablet}) {
+        padding-bottom: 12rem;
+//      text-align: left;
+        height: 165px;
+    }
+
+    /* Bigger than 750 */
+    @media (#{$bp-larger-than-tablet}) {
+        height: 190px;
+        padding: 16rem 0 14rem;
+    }
+
+    /* Bigger than 1000 */
+    @media (#{$bp-larger-than-desktop}) {
+        padding: 29rem 0;
+    }
+
+}
+
+.hero-heading {
+    @media (#{$bp-larger-than-phablet}) {
+        font-size: 4rem;
+    }
+
+    /* Bigger than 750 */
+    @media (#{$bp-larger-than-tablet}) {
+        font-size: 6rem;
+    }
+
+    /* Bigger than 1000 */
+    @media (#{$bp-larger-than-desktop}) {
+        font-size: 8.0rem;
+    }
+}
+
+//.phones {
+//    position: relative;
+//}
+//.phone {
+//    position: relative;
+//    max-width: 80%;
+//    margin: 3rem auto -12rem;
+//
+//    @media (#{$bp-larger-than-phablet}) {
+//        position: absolute;
+//        top: -7rem;
+//        right: 3rem;
+//        max-height: 362px;
+//        z-index: 3;
+//    }
+//
+//    /* Bigger than 750 */
+//    @media (#{$bp-larger-than-tablet}) {
+//        top: -14rem;
+//        right: 5rem;
+//        max-height: 510px;
+//    }
+//
+//    /* Bigger than 1000 */
+//    @media (#{$bp-larger-than-desktop}) {
+//        top: -16rem;
+//        max-height: 615px;
+//    }
+//}
+//
+//.phone + .phone {
+//    display: none;
+//
+//    /* Bigger than 550 */
+//    @media (#{$bp-larger-than-phablet}) {
+//        top: -6rem;
+//        display: block;
+//        max-width: 73.8%;
+//        right: 0;
+//        z-index: 2;
+//        max-height: 338px;
+//    }
+//
+//    /* Bigger than 750 */
+//    @media (#{$bp-larger-than-tablet}) {
+//        top: -12rem;
+//        max-height: 472px;
+//    }
+//
+//    /* Bigger than 1000 */
+//    @media (#{$bp-larger-than-desktop}) {
+//        top: -14rem;
+//        max-height: 570px;
+//    }
+//}
+
+/* Values
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.values {
+//    background-image: url('../images/values-bg.jpg');
+//    background-color: #DFECFD;
+    background-color: #fefef6;
+    background-size: cover;
+    color: #464646;
+//    background-color: #587DD9;
+}
+.value-multiplier {
+    margin-bottom: .5rem;
+    color: #11DFC7;
+}
+.value-heading {
+    margin-bottom: .3rem;
+}
+.value-description {
+    opacity: .8;
+    font-weight: 300;
+}
+
+/* Help
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.get-help {
+//    border-bottom: 1px solid #ddd;
+//    background-color: #A5BCF4;
+    background-color: #c1d2fc;
+}
+
+/* Categories
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.categories {
+    background-color: #587DD9;
+    background-size: cover;
+    color: #fff;
+
+    /* Bigger than 750 */
+    @media (#{$bp-larger-than-tablet}) {
+        padding: 15rem 0 8rem;
+    }
+}
+.categories .section-description {
+    margin-bottom: 4rem;
 }
